--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
    "homepage": "https://github.com/wangzl1163/big-axios#readme",
    "scripts": {
       "build:dev": "webpack --config build/webpack.dev.config.js && node build/copyTypeFile.js",
-      "build:prod": "webpack --config build/webpack.prod.config.js && tsc",
+      "build:prod": "tsc --noEmit && webpack --config build/webpack.prod.config.js",
       "publish-all": "npm run build:dev && npm run build:prod && npm publish"
    },
    "devDependencies": {
@@ -30,6 +30,7 @@
       "@babel/preset-typescript": "^7.23.3",
       "@typescript-eslint/eslint-plugin": "^6.18.1",
       "@typescript-eslint/parser": "^6.18.1",
+      "axios": "^1.6.6",
       "babel-loader": "^9.1.3",
       "eslint": "^8.56.0",
       "eslint-config-prettier": "^9.1.0",
