feat: 修改响应的数据的类型

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "allowJs": true,
       "outDir": "dist",
       "moduleResolution": "NodeNext",
-      "types": ["./types/index"]
+      "types": ["./types/index"],
+      "noImplicitAny": true
    },
    "exclude": ["node_modules", "dist", "build"]
 }
